vlib/v/checker/tests/unwrapped_result_infix_err.vv
fn f(k string) !bool {
	return true
}

fn g() ! {
	m := {
		'1': true
	}
	for k, _ in m {
		assert f(k)! == true
		assert f(k) == true
	}
}

fn main() {
	g()!
}
